infra/services/image-store/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-store
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-store
  template:
    metadata:
      labels:
        app: image-store
    spec:
      containers:
      - name: image-store
        image: ghcr.io/sofushn/ruc-workshop-dds-project:image-store-latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "100m"
            # memory: "1Gi"
            # cpu: "1"
