infra/services/image-store/primary.yaml
apiVersion: v1
kind: Pod
metadata:
  name: image-store-primary
  namespace: development
  labels:
    app: image-store
    image-store: primary
spec:
  containers:
  - name: image-store
    image: ghcr.io/sofushn/ruc-workshop-dds-project:image-store-latest
    ports:
    - containerPort: 8080
    volumeMounts:
    - name: image-store-data
      mountPath: /images
  volumes:
  - name: image-store-data
    emptyDir: {}
