infra/services/image-store/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: imgstore-service
  namespace: development
spec:
  selector:
    app: imgstore
  ports:
  - port: 80
    targetPort: 8080
