infra/services/image-store/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imgstore-ingress
  namespace: development

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  imgstore-service
                port:
                  number: 80
